--- a/index.html
+++ b/index.html
@@ -95,27 +95,11 @@
           <h1 class="pros-title text-red my-0">
             Lorem ipsum dolor sit.
           </h1>
-          <div class="row mt-5">
-            <div class="col-12 col-lg-6 mb-3">
-              <h5>
-                <span class="font-weight-bold">10,000</span> Lorem, ipsum.
-              </h5>
-            </div>
-            <div class="col-12 col-lg-6 mb-3">
-              <h5>
-                <span class="font-weight-bold">7</span> Lorem ipsum dolor sit.
-              </h5>
-            </div>
-            <div class="col-12 col-lg-6 mb-3">
-              <h5>
-                <span class="font-weight-bold">3,000</span> Lorem, ipsum.
-              </h5>
-            </div>
-            <div class="col-12 col-lg-6 mb-3">
-              <h5>
-                <span class="font-weight-bold">1</span> Lorem, ipsum dolor.
-              </h5>
-            </div>
+          <div class="mt-5">
+            <h5 class="bigger-line-height">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque incidunt, ad, possimus magnam, voluptatem consequuntur officiis dolores quia perspiciatis optio ea minus. Accusantium iusto a neque ex autem sint velit?
+            </h5>
+            <button class="button-action mt-4">Start Free Trial</button>
           </div>
         </div>
         <div class="pros-images my-5">
