--- a/index.html
+++ b/index.html
@@ -139,6 +139,58 @@
       </div>
     </section>
 
+    <section id="lots">
+      <div class="container my-5 pt-5">
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4 p-3">
+            <div class="card h-100 d-grid align-content-center py-4">
+              <h2 class="lot-card-title">
+                Пінетки
+              </h2>
+              <img class="" src="./images/lots/3.jpg" alt="">
+              <div class="card-body text-center">
+                <h4 class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam voluptas libero, quasi corporis mollitia itaque.
+                </h4>
+                <h2 class="lot-card-price">₴100</h2>
+                <button class="button-card mr-3">Купити</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 p-3">
+            <div class="card h-100 card-active d-grid align-content-center py-4">
+              <h2 class="lot-card-title">
+                Плед 90х90
+              </h2>
+              <img class="" src="./images/lots/2.jpg" alt="">
+              <div class="card-body text-center">
+                <h4 class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem odit cum praesentium provident ducimus suscipit.
+                </h4>
+                <h2 class="lot-card-price">₴535</h2>
+                <button class="button-card mr-3">Купити</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 p-3">
+            <div class="card h-100 d-grid align-content-center py-4">
+              <h2 class="lot-card-title">
+                Плед 130x150
+              </h2>
+              <img class="" src="./images/lots/6.jpg" alt="">
+              <div class="card-body text-center">
+                <h4 class="card-text">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita officia minima non? Ab fugit praesentium cumque rem molestiae.
+                </h4>
+                <h2 class="lot-card-price">₴1480</h2>
+                <button class="button-card mr-3">Купити</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
