add section of lots

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="container my-5 pt-5">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4 p-3">
-            <div class="card h-100 d-grid align-content-center py-4">
+            <div class="card h-100 d-grid align-content-center py-4 px-1">
               <h2 class="lot-card-title">
                 Пінетки
               </h2>
@@ -158,7 +158,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4 p-3">
-            <div class="card h-100 card-active d-grid align-content-center py-4">
+            <div class="card h-100 card-active d-grid align-content-center py-4 px-1">
               <h2 class="lot-card-title">
                 Плед 90х90
               </h2>
@@ -172,8 +172,8 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-4 p-3">
-            <div class="card h-100 d-grid align-content-center py-4">
+          <div class="col-12 offset-md-3 col-md-6 offset-lg-0 col-lg-4 p-3">
+            <div class="card h-100 d-grid align-content-center py-4 px-1">
               <h2 class="lot-card-title">
                 Плед 130x150
               </h2>
@@ -186,6 +186,34 @@
                 <button class="button-card mr-3">Купити</button>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="responses">
+      <div class="container my-5 pt-4">
+        <h1 class="text-red font-weight-800 text-center">
+          Lorem, ipsum.
+        </h1>
+        <div id="gallery" class="row mt-5">
+          <div class="col-lg-4 col-md-6 col-sm-12 p-2 w-100 d-none d-md-block p-0">
+            <img src="./images/gallery/1.webp" class="img-cover" alt = "Купити плед ручної роботи недорого">
+          </div>   
+          <div class="col-lg-4 col-md-6 col-sm-12 p-2 w-100 d-none d-md-block">
+            <img src="./images/gallery/2.webp" class="img-cover" alt = "Плед плетений з товстої пряжі, 100% вовна">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12 p-2 w-100 d-block">
+            <img src="./images/gallery/3.webp" class="img-cover" alt = "Плед з плюшевої пряжі">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12 p-2 w-100 d-block">
+            <img src="./images/gallery/4.webp" class="img-cover" alt = "Купити шерстяний натуральний плед">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12 p-2 w-100 d-none d-md-block">
+            <img src="./images/gallery/5.webp" class="img-cover" alt = "Плед у подарунок">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12 p-2 w-100 d-block">
+            <img src="./images/gallery/6.webp" class="img-cover" alt = "Подарунок на день закоханих">
           </div>
         </div>
       </div>
