--- a/index.html
+++ b/index.html
@@ -283,8 +283,50 @@
           <small class="text-muted">Ви також можете зв'язатися з нами за контактами нижче</small>
           <button class="button-action w-100 mt-2 mt-sm-3" id = "submitQuestion">Задати запитання</button>
         </form>
-      </div>      
+      </div>
     </section>
+
+    <!-- Footer -->
+    <footer id = "footer" class="mt-3 mt-sm-4 mt-md-5 py-3 bg-red">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-3 py-1 py-sm-2 py-md-3 text-center">
+            <a href="https://www.facebook.com/Amber-Puffy-101949748508866/" class="text-decoration-none text-light">
+              <i class="fab fa-facebook-f"></i>
+              &nbsp
+              Facebook
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-3 py-1 py-sm-2 py-md-3 text-center">
+            <a href="https://www.instagram.com/amber.puffy/" class="text-decoration-none text-light">
+              <i class="fab fa-instagram"></i>
+              &nbsp
+              Instagram
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-3 py-1 py-sm-2 py-md-3 text-center">
+            <a href="tel:+380988272766" class="text-decoration-none text-light">
+              <i class="fas fa-phone"></i>
+              &nbsp
+              +380 98 827 27 66
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-3 py-1 py-sm-2 py-md-3 text-center">
+            <a href="" class="text-decoration-none text-light">
+              <i class="far fa-envelope"></i>
+              &nbsp
+              amberpuffy@gmail.com
+            </a>
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-12 text-center text-light py-1">
+            Created by Uryn Dmytro telegram@tedi4t
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <script src="./bundle.js"></script>
